log/build_2025-05-27_12-29-18/my_robot_pkg/stderr.log
  File "/home/futill/targer_ws/install/my_robot_pkg/lib/python3.10/site-packages/my_robot_pkg/arm_move.py", line 216
    continue
    ^^^^^^^^
SyntaxError: 'continue' not properly in loop

